商品分類管理完成、設定ファイル更新

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/js_shop?characterEncoding=utf8&useSSL=true&verifyServerCertificate=false
+jdbc.url=jdbc:mysql://localhost:3306/ji_shop?characterEncoding=utf8&useSSL=true&verifyServerCertificate=false
 jdbc.username=root
 jdbc.password=admin
