--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <commons.lang3.version>3.11</commons.lang3.version>
         <commons.fileupload.version>1.3.1</commons.fileupload.version>
         <commons-io.version>2.6</commons-io.version>
+        <pagehelper.version>5.1.10</pagehelper.version>
     </properties>
 
     <dependencies>
@@ -198,6 +199,13 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons-io.version}</version>
+        </dependency>
+
+        <!-- PageHelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
         </dependency>
     </dependencies>
 
