--- a/src/main/resources/freemarker.properties
+++ b/src/main/resources/freemarker.properties
@@ -6,7 +6,6 @@ classic_compatible=true
 ##去掉多余的空格
 whitespace_stripping=true
 ##模版更新时间,这里配置是1秒更新一次,正式环境,模版不会改变,可以将这个值设很大,提高效率.
-#template_update_delay=3600
 template_update_delay=1
 ##国际化设置，这里设置为中国
 locale=zh_CN
@@ -23,4 +22,4 @@ datetime_format=yyyy-MM-dd HH:mm:ss
 ##数字显示格式hi.
 number_format=\#0.\#\#\#\#\#
 ##设置输出的字符集编码
-output_encoding=UTF-8
+output_encoding=utf-8
