--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,13 @@
         <jsp.version>2.3.1</jsp.version>
         <jstl.version>1.2</jstl.version>
         <mybatis.spring.version>1.3.2</mybatis.spring.version>
-        <druid.version>1.1.10</druid.version>
         <freemarker.version>2.3.28</freemarker.version>
         <fastjason.version>1.2.75</fastjason.version>
         <commons.lang3.version>3.11</commons.lang3.version>
         <commons.fileupload.version>1.3.1</commons.fileupload.version>
         <commons-io.version>2.6</commons-io.version>
         <pagehelper.version>5.1.10</pagehelper.version>
+        <hikaricp.version>3.4.5</hikaricp.version>
     </properties>
 
     <dependencies>
@@ -161,11 +161,11 @@
             <version>${mybatis.spring.version}</version>
         </dependency>
 
-        <!-- druid -->
+        <!-- hikaricp -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>${druid.version}</version>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${hikaricp.version}</version>
         </dependency>
 
         <!-- freemarker -->
