--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,6 @@
         <jstl.version>1.2</jstl.version>
         <mybatis.spring.version>1.3.2</mybatis.spring.version>
         <freemarker.version>2.3.28</freemarker.version>
-        <fastjason.version>1.2.75</fastjason.version>
         <commons.lang3.version>3.11</commons.lang3.version>
         <commons.fileupload.version>1.3.1</commons.fileupload.version>
         <commons-io.version>2.6</commons-io.version>
@@ -175,11 +174,21 @@
             <version>${freemarker.version}</version>
         </dependency>
 
-        <!-- fastjson -->
+        <!-- jackson -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjason.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- commons-lang -->
